@@ -3579,6 +3579,8 @@ parameter_list|(
 name|ASTNode
 name|typeNode
 parameter_list|)
+throws|throws
+name|SemanticException
 block|{
 switch|switch
 condition|(
@@ -3657,6 +3659,17 @@ argument_list|)
 operator|+
 literal|">"
 return|;
+case|case
+name|HiveParser
+operator|.
+name|TOK_STRUCT
+case|:
+return|return
+name|getStructTypeStringFromAST
+argument_list|(
+name|typeNode
+argument_list|)
+return|;
 default|default:
 return|return
 name|getTypeName
@@ -3670,6 +3683,140 @@ return|;
 block|}
 block|}
 specifier|private
+specifier|static
+name|String
+name|getStructTypeStringFromAST
+parameter_list|(
+name|ASTNode
+name|typeNode
+parameter_list|)
+throws|throws
+name|SemanticException
+block|{
+name|String
+name|typeStr
+init|=
+name|Constants
+operator|.
+name|STRUCT_TYPE_NAME
+operator|+
+literal|"<"
+decl_stmt|;
+name|typeNode
+operator|=
+operator|(
+name|ASTNode
+operator|)
+name|typeNode
+operator|.
+name|getChild
+argument_list|(
+literal|0
+argument_list|)
+expr_stmt|;
+name|int
+name|children
+init|=
+name|typeNode
+operator|.
+name|getChildCount
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|children
+operator|<=
+literal|0
+condition|)
+throw|throw
+operator|new
+name|SemanticException
+argument_list|(
+literal|"empty struct not allowed."
+argument_list|)
+throw|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|children
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|ASTNode
+name|child
+init|=
+operator|(
+name|ASTNode
+operator|)
+name|typeNode
+operator|.
+name|getChild
+argument_list|(
+name|i
+argument_list|)
+decl_stmt|;
+name|typeStr
+operator|+=
+name|unescapeIdentifier
+argument_list|(
+name|child
+operator|.
+name|getChild
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getText
+argument_list|()
+argument_list|)
+operator|+
+literal|":"
+expr_stmt|;
+name|typeStr
+operator|+=
+name|getTypeStringFromAST
+argument_list|(
+operator|(
+name|ASTNode
+operator|)
+name|child
+operator|.
+name|getChild
+argument_list|(
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|i
+operator|<
+name|children
+operator|-
+literal|1
+condition|)
+name|typeStr
+operator|+=
+literal|","
+expr_stmt|;
+block|}
+name|typeStr
+operator|+=
+literal|">"
+expr_stmt|;
+return|return
+name|typeStr
+return|;
+block|}
+specifier|private
 name|List
 argument_list|<
 name|FieldSchema
@@ -3679,6 +3826,8 @@ parameter_list|(
 name|ASTNode
 name|ast
 parameter_list|)
+throws|throws
+name|SemanticException
 block|{
 name|List
 argument_list|<
