@@ -1,0 +1,21 @@
+query: drop table abc
+query: create table abc(strct struct<a:int, b:string, c:string>)
+row format delimited
+  fields terminated by '\t'
+  collection items terminated by '\001'
+query: load data local inpath '../data/files/kv1.txt'
+overwrite into table abc
+query: SELECT strct, strct.a, strct.b FROM abc LIMIT 10
+Input: default/abc
+Output: file:/data/users/zshao/tools/deploy-trunk-apache-hive/build/ql/tmp/1624100365/10000
+{"a":238,"b":"val_238","c":null}	238	val_238
+{"a":86,"b":"val_86","c":null}	86	val_86
+{"a":311,"b":"val_311","c":null}	311	val_311
+{"a":27,"b":"val_27","c":null}	27	val_27
+{"a":165,"b":"val_165","c":null}	165	val_165
+{"a":409,"b":"val_409","c":null}	409	val_409
+{"a":255,"b":"val_255","c":null}	255	val_255
+{"a":278,"b":"val_278","c":null}	278	val_278
+{"a":98,"b":"val_98","c":null}	98	val_98
+{"a":484,"b":"val_484","c":null}	484	val_484
+query: drop table abc
